fix: small contrast issue fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,13 +5,13 @@
 @layer base {
   :root {
     --background: rgba(255, 255, 255, 1);
-    --foreground: rgba(56, 56, 56, 1);
+    --foreground: rgba(50, 50, 50, 1);
 
     --card: rgba(255, 255, 255, 1);
-    --card-foreground: rgba(56, 56, 56, 1);
+    --card-foreground: rgba(50, 50, 50, 1);
 
     --popover: rgba(255, 255, 255, 1);
-    --popover-foreground: rgba(56, 56, 56, 1);
+    --popover-foreground: rgba(50, 50, 50, 1);
 
     --primary: rgba(56, 38, 38, 1);
     --primary-foreground: rgba(255, 255, 255, 1);
@@ -30,7 +30,7 @@
 
     --border: rgba(218, 218, 218, 1);
     --input: rgba(218, 218, 218, 1);
-    --ring: rgba(56, 56, 56, 1);
+    --ring: rgba(50, 50, 50, 1);
 
     --radius: 0.5rem;
   }
@@ -39,10 +39,10 @@
     --background: rgba(15, 15, 15, 1);
     --foreground: rgba(255, 255, 255, 1);
 
-    --card: rgba(56, 56, 56, 1);
+    --card: rgba(50, 50, 50, 1);
     --card-foreground: rgba(255, 255, 255, 1);
 
-    --popover: rgba(56, 56, 56, 1);
+    --popover: rgba(50, 50, 50, 1);
     --popover-foreground: rgba(255, 255, 255, 1);
 
     --primary: rgba(255, 255, 255, 1);
